src/test/deca/syntax/invalid/created/lexer/no_init_but_assign.deca.res
'{': [@0,201:201='{',<33>,10:0]
IDENT: [@1,207:209='int',<21>,11:4]
IDENT: [@2,211:211='a',<21>,11:8]
',': [@3,212:212=',',<29>,11:9]
IDENT: [@4,214:214='c',<21>,11:11]
'=': [@5,216:216='=',<22>,11:13]
INT: [@6,218:218='5',<44>,11:15]
';': [@7,219:219=';',<30>,11:16]
IDENT: [@8,225:231='boolean',<21>,12:4]
IDENT: [@9,233:233='k',<21>,12:12]
'=': [@10,235:235='=',<22>,12:14]
'!': [@11,237:237='!',<41>,12:16]
'true': [@12,238:241='true',<19>,12:17]
';': [@13,242:242=';',<30>,12:21]
IDENT: [@14,248:250='int',<21>,13:4]
IDENT: [@15,252:252='v',<21>,13:8]
'=': [@16,254:254='=',<22>,13:10]
';': [@17,256:256=';',<30>,13:12]
'}': [@18,258:258='}',<34>,14:0]
